--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/customJs/app.js"]
           },
           "configurations": {
             "production": {
