--- a/angular.json
+++ b/angular.json
@@ -32,12 +32,12 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "5mb",
                   "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
+                  "maximumWarning": "4mb",
                   "maximumError": "4kb"
                 }
               ],
